# content-core

./: .gitignore  .windsurfrules  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  REFACTOR.md  SKILL.md  TEST_PLAN.md  pyproject.toml
.agent-smith/: index.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.claude/sessions/OSS-208/: architecture.md  context.md  plan.md
.claude/sessions/OSS-216/: plan.md
.claude/sessions/network_issues/: network_issues.md
.codex-plugin/: plugin.json
.github/workflows/: claude-code-review.yml  package.yml  publish.yml  test.yml
docker/: Dockerfile  docker-compose.yml  docker.env.example  entrypoint.sh
docs/: DOCLING_VLM_IMPLEMENTATION.md  cli.md  configuration.md  getting-started.md  mcp.md  processors.md  usage.md
docs/_legacy/: processors.md  usage.md
docs/benchmarks/: docx-benchmark.md  pdf-benchmark.md
docs/engines/: audio-video.md  docling-vlm.md  docling.md  marker.md  overview.md  pymupdf.md  url-engines.md
docs/integrations/: langchain.md  mcp.md
examples/: main.py
raycast-content-core/: package-lock.json  package.json  raycast-env.d.ts
raycast-content-core/src/: extract-content.tsx  extract-file.tsx  extract-url.tsx  quick-extract.tsx  summarize-content.tsx  summarize-file.tsx  summarize-url.tsx
raycast-content-core/src/utils/: content-core.ts  types.ts
raycast/content-core/: CHANGELOG.md  README.md  package-lock.json  package.json
raycast/content-core/src/: extract-content.tsx  quick-extract.tsx  summarize-content.tsx
raycast/content-core/src/utils/: content-core.ts  types.ts
scripts/: benchmark.py  benchmark_pdf_engines.py  create_benchmark_pdf.py
scripts/benchmarks/: __init__.py  base.py  reporter.py  runner.py
scripts/benchmarks/test_data/: __init__.py  docx_expected.py  pdf_expected.py
scripts/benchmarks/types/: __init__.py  docx.py  pdf.py
skills/content-core/: SKILL.md
specs/: parallel-audio-transcription.md
src/content_core/: __init__.py  cc_config.yaml  cli.py  config.py  defaults.py  extraction.py  logging.py  models.py  models_v2.py  templated_message.py
src/content_core/api/: __init__.py  app.py  schemas.py
src/content_core/api/routes/: __init__.py  engines.py  extract.py  health.py
src/content_core/common/: CLAUDE.md  __init__.py  exceptions.py  retry.py  state.py  types.py
src/content_core/content/: __init__.py
src/content_core/content/extraction/: __init__.py  fallback.py  graph.py  router.py
src/content_core/content/identification/: file_detector.py
src/content_core/content/summary/: core.py
src/content_core/engine_config/: CLAUDE.md  __init__.py  env.py  resolver.py  schema.py
src/content_core/mcp/: server.py
src/content_core/notebooks/: crawltest.ipynb  run.ipynb  yt.ipynb
src/content_core/processors/: CLAUDE.md  __init__.py  audio.py  base.py  docling.py  docling_vlm.py  image.py  marker.py  office.py  pdf.py  pdf_llm.py  pdf_vision.py  protocol.py  registry.py  text.py  url.py  video.py  video_vision.py  youtube.py
src/content_core/processors/document/: __init__.py  docling.py  docx.py  epub.py  image.py  pdf.py  pdf_vision.py  pptx.py  xlsx.py
src/content_core/processors/media/: __init__.py  audio.py  video.py  video_vision.py
src/content_core/processors/url/: __init__.py  bs4.py  jina.py  (+4 more)
src/content_core/tools/: __init__.py  extract.py  summarize.py
src/content_core/ui/: __init__.py  routes.py
tests/: conftest.py
tests/e2e/: test_docling.py  test_media.py  test_remote.py  test_url_engines.py  test_youtube.py
tests/input_content/: benchmark.docx  file.docx  file.pptx  file.xlsx
tests/integration/: conftest.py  test_api_endpoints.py  test_cli_v2.py  test_extraction.py  test_proxy_integration.py
tests/unit/: test_api_schemas.py  test_audio_concurrency.py  test_audio_model_override.py  test_cli.py  test_config.py  test_config_file.py  test_config_resolver.py  test_config_v2.py  test_docling.py  test_docling_extraction.py  test_docling_vlm.py  test_epub_extraction.py  test_extract_api.py  test_fallback.py  test_logging.py  test_mcp_v2.py  test_media_pipeline.py  test_models_v2.py  test_office_extraction.py  test_pdf_extraction.py  test_pdf_helpers.py  test_proxy.py  test_pymupdf_ocr.py  test_reddit_extraction.py  test_registry.py  test_retry.py  test_routing.py  test_text_processing.py  test_url_engine_select.py  test_vision_processors.py  test_youtube_parsing.py
(+6 files in other folders)
