[project]
name = "content-core"
version = "1.14.1"
description = "Extract what matters from any media source. Available as Python Library, macOS Service, CLI and MCP Server"
readme = "README.md"
homepage = "https://github.com/lfnovo/content-core"
authors = [
    { name = "LUIS NOVO", email = "lfnovo@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11",
    "bs4>=0.0.2",
    "esperanto>=2.17.0",
    "jinja2>=3.1.6",
    "langdetect>=1.0.9",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pymupdf>=1.25.5",
    "pymupdf4llm>=0.0.17",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "python-pptx>=1.0.2",
    "youtube-transcript-api>=1.0.3",
    "langgraph>=1.0.0",
    "dicttoxml>=1.7.16",
    "validators>=0.34.0",
    "ai-prompter>=0.2.3",
    "moviepy>=2.1.2",
    "readability-lxml>=0.8.4.1",
    "firecrawl-py>=2.7.0",
    "pillow>=10.4.0",
    "asciidoc>=10.2.1",
    "pytubefix>=9.1.1",
    "fastmcp>=2.10.0",
    "tenacity>=8.0.0",
    "markdownify>=0.12.1",
    "docling[vlm]>=2.71.0",
    "easyocr>=1.7.2",
]

[project.optional-dependencies]
docling = ["docling>=2.71.0"]
docling-vlm = [
    "docling[vlm]>=2.71.0",
    "httpx>=0.27.0",
]
docling-mlx = [
    "docling[vlm]>=2.71.0",
    "mlx>=0.5.0",
    "httpx>=0.27.0",
]
crawl4ai = ["crawl4ai>=0.7.0"]

[project.scripts]
ccore = "content_core:ccore"
cclean = "content_core:cclean"
csum = "content_core:csum"
content-core-mcp = "content_core.mcp.server:main"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling", "pip"]
build-backend = "hatchling.build"

[tool.setuptools]
package-dir = {"content_core" = "src/content_core"}

[tool.uv.sources]

[dependency-groups]
dev = [
    "ipykernel>=4.0.1",
    "ipywidgets>=4.0.0",
    "openai>=1.78.1",
    "pyperclip>=1.9.0",
    "pytest>=7.2.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
