[project]
name = "content-core"
version = "2.0.0"
description = "Extract what matters from any media source. Available as Python Library, macOS Service, CLI and MCP Server"
readme = "README.md"
homepage = "https://github.com/lfnovo/content-core"
authors = [
    { name = "LUIS NOVO", email = "lfnovo@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13",
    "bs4>=0.0.2",
    "esperanto>=2.20.0",
    "jinja2>=3.1.6",
    "langdetect>=1.0.9",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.0",
    "fast-ebook>=0.2.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.2.0",
    "python-pptx>=1.0.2",
    "youtube-transcript-api>=1.2.0",
    "validators>=0.34.0",
    "ai-prompter>=0.4.0",
    "readability-lxml>=0.8.4.1",
    "firecrawl-py>=4.13.0",
    "pillow>=12.0.0",
    "asciidoc>=10.2.1",
    "pytubefix>=10.0.0",
    "fastmcp>=3.0.0",
    "tenacity>=9.0.0",
    "markdownify>=0.14.0",
    "pydantic-settings>=2.12.0",
    "tomli>=2.0; python_version < '3.11'",
    "click>=8.3.0",
]

[project.optional-dependencies]
docling = ["docling>=2.86.0", "peft>=0.18.0", "transformers>=4.50,<5"]
crawl4ai = ["crawl4ai>=0.7.0"]
langchain = ["langchain-core>=0.1.0"]

[project.scripts]
content-core = "content_core.cli:cli"
content-core-mcp = "content_core.mcp.server:main"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling", "pip"]
build-backend = "hatchling.build"

[tool.setuptools]
package-dir = {"content_core" = "src/content_core"}

[tool.uv.sources]

[dependency-groups]
dev = [
    "crawl4ai>=0.8.0",
    "docling>=2.86.0",
    "transformers>=4.50,<5",
    "ipykernel>=7.0.0",
    "ipywidgets>=8.0.0",
    "openai>=2.15.0",
    "peft>=0.18.1",
    "pyperclip>=1.9.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
markers = [
    "e2e: end-to-end tests requiring network and API keys",
    "e2e_heavy: heavy e2e tests requiring large model downloads (Docling)",
]
addopts = "-m 'not e2e and not e2e_heavy' -W ignore::DeprecationWarning"

[tool.ruff.lint]
ignore = ["E402"]
